@@ -3,9 +3,9 @@ package com.molean.isletopia.menu.settings.biome;
 import com.molean.isletopia.IsletopiaTweakers;
 import com.molean.isletopia.menu.ItemStackSheet;
 import com.molean.isletopia.menu.settings.SettingsMenu;
+import com.molean.isletopia.infrastructure.individual.I18n;
 import com.molean.isletopia.utils.PlotUtils;
 import com.plotsquared.core.plot.Plot;
-import com.sk89q.worldedit.world.biome.BiomeType;
 import com.sk89q.worldedit.world.biome.BiomeTypes;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
@@ -21,19 +21,23 @@ import org.bukkit.event.inventory.InventoryDragEvent;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemFlag;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-public class BiomeMenu1 implements Listener {
+public class BiomeMenu implements Listener {
 
     private final Player player;
     private final Inventory inventory;
-    private final List<LocalBiome> biomes = new ArrayList<>(Arrays.asList(LocalBiome.values()));
+    private final List<Biome> biomes = List.of(Biome.values());
+    private final int page;
 
-    public BiomeMenu1(Player player) {
+    public BiomeMenu(Player player) {
+        this(player, 0);
+    }
+
+    public BiomeMenu(Player player, int page) {
         this.player = player;
-        inventory = Bukkit.createInventory(player, 54, "选择想要切换的生物群系:");
+        this.page = page;
+        inventory = Bukkit.createInventory(player, 54, I18n.getMessage("menu.settings.biome.title", player));
         Bukkit.getPluginManager().registerEvents(this, IsletopiaTweakers.getPlugin());
     }
 
@@ -43,33 +47,37 @@ public class BiomeMenu1 implements Listener {
             inventory.setItem(i, itemStackSheet.build());
         }
 
-
         Biome biome = player.getLocation().getBlock().getBiome();
-        for (int i = 0; i < biomes.size() && i < inventory.getSize() - 2; i++) {
-            LocalBiome localBiome = biomes.get(i);
+
+        for (int i = page * 52; i < biomes.size() && i - page * 52 < inventory.getSize() - 2; i++) {
+            LocalBiome localBiome = I18n.getBiome(biomes.get(i).name().toUpperCase(), player);
+            if (localBiome.getName() == null) {
+                localBiome.setName("未知");
+            }
+            if (localBiome.getIcon() == null) {
+                localBiome.setIcon(Material.PLAYER_HEAD);
+            }
             ItemStackSheet itemStackSheet = new ItemStackSheet(localBiome.getIcon(), "§f" + localBiome.getName());
             if (!localBiome.getCreatures().isEmpty()) {
-                itemStackSheet.addLore("§f生物: " + String.join(", ", localBiome.getCreatures()));
+                itemStackSheet.addLore(I18n.getMessage("menu.settings.biome.creature", player) + String.join(", ", localBiome.getCreatures()));
             }
             if (!localBiome.getEnvironment().isEmpty()) {
-                itemStackSheet.addLore("§f环境: " + String.join(", ", localBiome.getEnvironment()));
+                itemStackSheet.addLore(I18n.getMessage("menu.settings.biome.environment", player) + String.join(", ", localBiome.getEnvironment()));
             }
-            for (String s : localBiome.getExtraInfo()) {
-                itemStackSheet.addLore(s);
-            }
-            if (biome.name().equalsIgnoreCase(localBiome.name())) {
+            if (biome.name().equalsIgnoreCase(localBiome.getId())) {
                 itemStackSheet.addItemFlag(ItemFlag.HIDE_ENCHANTS);
                 itemStackSheet.addEnchantment(Enchantment.ARROW_DAMAGE, 1);
                 String display = itemStackSheet.getDisplay();
-                itemStackSheet.setDisplay("§f当前所在生物群系: " + display);
+                itemStackSheet.setDisplay(I18n.getMessage("menu.settings.biome.current", player) + display);
             }
-            inventory.setItem(i, itemStackSheet.build());
+            inventory.setItem(i - page * 52, itemStackSheet.build());
         }
 
-        ItemStackSheet next = new ItemStackSheet(Material.LADDER, "§f下一页");
+
+        ItemStackSheet next = new ItemStackSheet(Material.LADDER, I18n.getMessage("menu.settings.biome.nextPage", player));
         inventory.setItem(inventory.getSize() - 2, next.build());
 
-        ItemStackSheet father = new ItemStackSheet(Material.BARRIER, "§f返回主菜单");
+        ItemStackSheet father = new ItemStackSheet(Material.BARRIER, I18n.getMessage("menu.settings.biome.return", player));
         inventory.setItem(inventory.getSize() - 1, father.build());
 
         Bukkit.getScheduler().runTaskLater(IsletopiaTweakers.getPlugin(), () -> player.openInventory(inventory), 1);
@@ -95,23 +103,33 @@ public class BiomeMenu1 implements Listener {
             return;
         }
         if (slot == inventory.getSize() - 2) {
-            Bukkit.getScheduler().runTaskAsynchronously(IsletopiaTweakers.getPlugin(), () -> new BiomeMenu2(player).open());
+            if (page == 0) {
+                Bukkit.getScheduler().runTaskAsynchronously(IsletopiaTweakers.getPlugin(), () -> new BiomeMenu(player, 1).open());
+            } else {
+                Bukkit.getScheduler().runTaskAsynchronously(IsletopiaTweakers.getPlugin(), () -> new BiomeMenu(player, 0).open());
+            }
+
             return;
         }
 
         Plot currentPlot = PlotUtils.getCurrentPlot(player);
-        LocalBiome localBiome = biomes.get(slot);
+        LocalBiome localBiome = I18n.getBiome(biomes.get(slot + page * 52).name().toUpperCase(), player);
+        if (localBiome.getName() == null) {
+            localBiome.setName("未知");
+        }
+        if (localBiome.getIcon() == null) {
+            localBiome.setIcon(Material.PLAYER_HEAD);
+        }
         if (currentPlot.getOwner().equals(player.getUniqueId())) {
-            player.sendMessage("§8[§3岛屿助手§8] §7尝试修改岛屿生物群系...");
-            currentPlot.setBiome(BiomeTypes.get(localBiome.name().toLowerCase()), () -> {
-                player.sendMessage("§8[§3岛屿助手§8] §7成功修改生物群系为:" + localBiome.getName() + ".");
+            player.sendMessage(I18n.getMessage("menu.settings.biome.try", player));
+            currentPlot.setBiome(BiomeTypes.get(localBiome.getId().toLowerCase()), () -> {
+                player.sendMessage(I18n.getMessage("menu.settings.biome.ok", player) + localBiome.getName() + ".");
             });
         } else {
             Bukkit.getScheduler().runTask(IsletopiaTweakers.getPlugin(), () -> {
-                Bukkit.getScheduler().runTask(IsletopiaTweakers.getPlugin(), () -> player.openInventory(inventory));
+                player.kickPlayer(I18n.getMessage("error.menu.settings.member.non-owner", player));
             });
         }
-
         player.closeInventory();
 
     }
